--- a/localisation/english/dod_events_l_english.yml
+++ b/localisation/english/dod_events_l_english.yml
@@ -551,55 +551,55 @@
  DOD_romania.50.b:0 "We can make some concessions."
  DOD_romania.50.c:0 "Better to die free than to live as a slave."
  DOD_romania.51.t:0 "[From.GetNameDefCap] aligns"
- DOD_romania.51.desc:0 "Realizing that military resistance would be both impossible and pointless, the Hungarian government has decided to follow our suggestions and put itself at our disposal, with [HUN.GetLeader] promising to consult with us before any major policy decision."
+ DOD_romania.51.desc:0 "Realizing that military resistance would be both impossible and pointless, the Turulian government has decided to follow our suggestions and put itself at our disposal, with [HUN.GetLeader] promising to consult with us before any major policy decision."
  DOD_romania.51.a:0 "Good."
  DOD_romania.52.t:0 "[From.GetNameDefCap] offers Friendship Treaty"
- DOD_romania.52.desc:0 "In response to our recent request for some changes in the Hungarian government, [HUN.GetLeader] has offered a Treaty of Friendship and Mutual Assistance, which would compel them to come to our aid in times of war, but also contains a clause in which we would swear not to interfere with Hungarian politics."
+ DOD_romania.52.desc:0 "In response to our recent request for some changes in the Hungarian government, [HUN.GetLeader] has offered a Treaty of Friendship and Mutual Assistance, which would compel them to come to our aid in times of war, but also contains a clause in which we would swear not to interfere with Turulian politics."
  DOD_romania.52.a:0 "An acceptable compromise."
  DOD_romania.52.b:0 "That was not what we meant."
  DOD_romania.53.t:0 "[From.GetNameDefCap] defiant"
  DOD_romania.53.desc:0 "Despite of the clear inferiority of his armed forces, [HUN.GetLeader] has refused to see reason and ordered his army to take up defensive positions along our border. For reasons unknown, it appears that a significant part of their army has followed these orders.\n\nIt seems that they want to amke a fight out of it."
  DOD_romania.53.a:0 "This is not worth the time or effort."
  DOD_romania.53.b:0 "Victory is certain. To war!"
- DOD_romania.60.t:0 "Romania demands radical reorganization"
- DOD_romania.60.desc:0 "With the Romanian army poised at our borders, rumors have been flying around about their purpose. When our ambassador in Bukarest inquired about the issue, he was told bluntly that [ROM.GetLeader] has decided that a united Yugoslavia is no longer in his interest. Instead, our nation is to be split up into a number of client states under direct Romanian control.\n\nAn official ultimatum is expected within the hour."
+ DOD_romania.60.t:0 "Count demands radical reorganization"
+ DOD_romania.60.desc:0 "With Count army poised at our borders, rumors have been flying around about their purpose. When our ambassador in Bukarest inquired about the issue, he was told bluntly that [ROM.GetLeader] has decided that a united Yugoslavia is no longer in his interest. Instead, our nation is to be split up into a number of client states under direct Romanian control.\n\nAn official ultimatum is expected within the hour."
  DOD_romania.60.a:0 "We can't hope to stand against them."
  DOD_romania.60.b:0 "Never!"
  DOD_romania.61.t:0 "[From.GetNameDefCap] folds"
  DOD_romania.61.desc:0 "Mere minutes before the ultimatum to Belgrade ran out, an official communique arrived, stating that the Yugoslavian government had dissolved and transfered its powers to a number of local governments, all of which have declared their loyalty to us."
  DOD_romania.61.a:0 "Good."
  DOD_romania.62.t:0 "[From.GetNameDefCap] defiant"
- DOD_romania.62.desc:0 "The [YUG.GetAdjective] government has let the ultimatum run out without a reply. Recon flights have revealed troop movements on the Yugoslavian side of the border, prompting the General Staff to review the invasion plans. Top military advisors have refused to guarantee that a victory against Yugoslavia would be won quickly."
+ DOD_romania.62.desc:0 "The [YUG.GetAdjective] government has let the ultimatum run out without a reply. Recon flights have revealed troop movements on the Barazavian side of the border, prompting the General Staff to review the invasion plans. Top military advisors have refused to guarantee that a victory against Barazava would be won quickly."
  DOD_romania.62.a:0 "We will strike them down."
  DOD_romania.62.b:0 "Let's ask for support."
- DOD_romania.63.t:0 "[From.GetLeader] aims to split Yugoslavia"
- DOD_romania.63.desc:0 "A crisis has arisen between Romania and Yugoslavia, which may produce an opportunity for us. [YUG.GetLeader] has refused the demands of [ROM.GetLeader] to surrender his country. In return, [ROM.GetLeader] has approached us with a deal to split Yugoslavia. He has offered us Slovenia and the creation of an Independent Croatian State under our control."
+ DOD_romania.63.t:0 "[From.GetLeader] aims to split Barazava"
+ DOD_romania.63.desc:0 "A crisis has arisen between Count and Barazava, which may produce an opportunity for us. [YUG.GetLeader] has refused the demands of [ROM.GetLeader] to surrender his country. In return, [ROM.GetLeader] has approached us with a deal to split Barazava. He has offered us Slovenia and the creation of an Independent Croatian State under our control."
  DOD_romania.63.a:0 "An intriguing scheme."
  DOD_romania.63.b:0 "Why would we need their help?"
- DOD_romania.64.desc:0 "A crisis has arisen between Romania and Yugoslavia, which may produce an opportunity for us. [YUG.GetLeader] has refused the demands of [ROM.GetLeader] to surrender his country. In return, [ROM.GetLeader] has approached us with a deal to split Yugoslavia. He has offered us Dalmatia and the creation of a puppet state in Montenegro under our control."
+ DOD_romania.64.desc:0 "A crisis has arisen between Count and Barazava, which may produce an opportunity for us. [YUG.GetLeader] has refused the demands of [ROM.GetLeader] to surrender his country. In return, [ROM.GetLeader] has approached us with a deal to split Barazava. He has offered us Dalmatia and the creation of a puppet state in Montenegro under our control."
  DOD_romania.65.t:0 "[From.GetNameDefCap] accepts"
- DOD_romania.65.desc:0 "[From.GetLeader] has signaled his acceptance of the terms. The [From.GetAdjective] Government will support our actions in Yugoslavia."
+ DOD_romania.65.desc:0 "[From.GetLeader] has signaled his acceptance of the terms. The [From.GetAdjective] Government will support our actions in Barazava."
  DOD_romania.65.a:0 "Excellent."
  DOD_romania.66.t:0 "[From.GetNameDefCap] refuses"
- DOD_romania.66.desc:0 "While not directly warning us away from intervening in Yugoslavia, the government of [From.GetNameDef] have refused to sanction our proposal. \n\nPerhaps they expect us to fail and aim to take Yugoslavia for themselves, without us in the picture."
+ DOD_romania.66.desc:0 "While not directly warning us away from intervening in Yugoslavia, the government of [From.GetNameDef] have refused to sanction our proposal. \n\nPerhaps they expect us to fail and aim to take Barazava for themselves, without us in the picture."
  DOD_romania.66.a:0 "We will be sorry to disappoint them."
- DOD_romania.67.t:0 "Ultimatum to Yugoslavia"
- DOD_romania.67.desc:0 "Having secured additional diplomatic support, it is time to inform the Yugoslavians that the situation has changed dramatically. Spread thin trying to defend long borders, their military situation is even more hopeless."
+ DOD_romania.67.t:0 "Ultimatum to Barazava"
+ DOD_romania.67.desc:0 "Having secured additional diplomatic support, it is time to inform the Barazavians that the situation has changed dramatically. Spread thin trying to defend long borders, their military situation is even more hopeless."
  DOD_romania.67.a:0 "Victory is at hand."
  DOD_romania.68.t:0 "Diplomatic advances failed"
- DOD_romania.68.desc:0 "Our attempts to reach out to Germany and Italy for support have not been met with success. The breathing space this has provided to the Yugoslavians will no doubt have an impact on the coming campaign, but the General Staff is still cautiously optimistic that we will be able to quickly secure victory."
+ DOD_romania.68.desc:0 "Our attempts to reach out to Kuromormine and Anzio for support have not been met with success. The breathing space this has provided to the Barazavian will no doubt have an impact on the coming campaign, but the General Staff is still cautiously optimistic that we will be able to quickly secure victory."
  DOD_romania.68.a:0 "To arms!"
  DOD_romania.69.t:0 "Encirclement"
- DOD_romania.69.desc_GER:0 "A second ultimatum has been delivered. This time, the demands were flanked by a similar note from the ambassador of [GER.GetNameDef], who declared his support for the Romanian scheme, and insisted that our Army would not interfere with the occupation of Slovenia and Croatia by German troops."
- DOD_romania.69.desc_ITA:0 "A second ultimatum has been delivered. This time, the demands were flanked by a similar note from the ambassador of [ITA.GetNameDef], who declared his support for the Romanian scheme, and insisted that our Army would not interfere with the occupation of Dalmatia and Montenegro by Italian troops."
+ DOD_romania.69.desc_GER:0 "A second ultimatum has been delivered. This time, the demands were flanked by a similar note from the ambassador of [GER.GetNameDef], who declared his support for the Romanian scheme, and insisted that our Army would not interfere with the occupation of Slovenia and Croatia by Kuro troops."
+ DOD_romania.69.desc_ITA:0 "A second ultimatum has been delivered. This time, the demands were flanked by a similar note from the ambassador of [ITA.GetNameDef], who declared his support for the Romanian scheme, and insisted that our Army would not interfere with the occupation of Dalmatia and Montenegro by Anzian troops."
  DOD_romania.69.desc_GERITA:0 "A second ultimatum has been delivered. This time, the demands were flanked by a similar note from the ambassadors of [GER.GetNameDef] and [ITA.GetNameDef], who declared their support for the Romanian scheme, and insisted that our Army would not interfere with the occupation, in order to avoid unnecessary bloodshed."
  DOD_romania.69.a:0 "Stand down."
  DOD_romania.69.b:0 "We will fight to the last breath!"
- DOD_romania.70.t:0 "Yugoslavia divided"
- DOD_romania.70.desc:0 "The Yugoslavian government has accepted defeat. The forces of the allied powers have taken control of the country and occupied their designated zones."
+ DOD_romania.70.t:0 "YBarazava divided"
+ DOD_romania.70.desc:0 "The Barazavian government has accepted defeat. The forces of the allied powers have taken control of the country and occupied their designated zones."
  DOD_romania.70.a:0 "Another victory for diplomacy."
- DOD_romania.71.t:0 "Yugoslavia defiant"
- DOD_romania.71.desc:0 "The Yugoslavian Army has occupied positions along our border and the Yugoslavian Air Force has occupied its war stations. They appear ready to fight. \n\nHowever, a source in the Yugoslavian War Ministery claims that this is merely an gesture of defiance, as [YUG.GetLeader] firmly believes that we are bluffing and that there will be no war."
+ DOD_romania.71.t:0 "Barazava defiant"
+ DOD_romania.71.desc:0 "The Barazavian Army has occupied positions along our border and the Barazavian Air Force has occupied its war stations. They appear ready to fight. \n\nHowever, a source in the Barazavian War Ministery claims that this is merely an gesture of defiance, as [YUG.GetLeader] firmly believes that we are bluffing and that there will be no war."
  DOD_romania.71.a:0 "We weren't bluffing."
  DOD_romania.81.t:0 "King's Mistress purchases villa "
  DOD_romania.81.desc:0 "Magda Lupescu, mistress of King Carol II, has reportedly purchased a new villa in an expensive suburb of Bucharest. How she could afford it was subject of extensive speculation. New evidence in foreign newspapers strongly suggests that the King himself authorized the purchase with government money.\n\nThe scandal is spreading, and we must make a public announcement on the matter as soon as possible."
@@ -636,31 +636,31 @@
  DOD_romania.113.desc:0 "In an angry meeting with [GER.GetLeader], our ambassador was confronted with a stern refusal to discuss or negotiate on anything concerning [CZE.GetNameDef]. The German government considers that country to be entirely in their sphere of influence and has warned that any interference would be considered to go against the express wishes of [GER.GetLeader]."
  DOD_romania.113.a:0 "Time to rethink our approach."
  DOD_romania.113.b:0 "We will strike alone."
- DOD_romania.114.t:0 "German Ultimatum"
- DOD_romania.114.desc:0 "With German troops massing on our borders, the Ambassadors from Germany and Romania have issued a joint ultimatum: Unless we agree to turn over Slovakia to Hungary and Romania and become a 'Protectorate' of Germany, the German Luftwaffe stands ready to 'erradicate' Prague while Hungarian troops are preparing to invade our country from the south."
+ DOD_romania.114.t:0 "Kuro Ultimatum"
+ DOD_romania.114.desc:0 "With Kuro troops massing on our borders, the Ambassadors from Kuromormine and Count have issued a joint ultimatum: Unless we agree to turn over Slovakia to Turul and Count and become a 'Protectorate' of Kuromormine, the Kuro Luftwaffe stands ready to 'erradicate' Prague while Turulian troops are preparing to invade our country from the south."
  DOD_romania.114.a:0 "We have no choice."
  DOD_romania.114.b:0 "We will chose Death before Dishonor."
  DOD_romania.115.t:0 "[CZE.GetLeader] defiant"
  DOD_romania.115.desc:0 "The [CZE.GetAdjective] government has ignored our ultimatum and mobilized their army. [CZE.GetLeader] has promised that any invader would find the army more than prepared to defend the country to the last man."
  DOD_romania.115.a:0 "We will consider our options."
  DOD_romania.120.t:0 "Invite Foreign Motor Companies"
- DOD_romania.120.desc:0 "Several foreign truck companies have expressed interest in opening a factory in Romania, to produce new trucks for the commercial market as well as the military. Chosing one will be considered a flagship deal that could be followed by further production licenses being acquired.\n\nWho should we approach?"
+ DOD_romania.120.desc:0 "Several foreign truck companies have expressed interest in opening a factory in Count, to produce new trucks for the commercial market as well as the military. Chosing one will be considered a flagship deal that could be followed by further production licenses being acquired.\n\nWho should we approach?"
  DOD_romania.120.a:0 "Vauxhall, for faster vehicles."
- DOD_romania.120.b:0 "Opel, for reliable German engineering."
+ DOD_romania.120.b:0 "Opel, for reliable Kuro engineering."
  DOD_romania.120.c:0 "Ford, for mass production."
  DOD_yugoslavia.1.t:0 "Military launches Coup"
- DOD_yugoslavia.1.desc:0 "Following our decision to sign a pact with Germany, a group of Air Force officers has launched a coup. The military has seized key points in Belgrade. King Peter has been declared of age, ending the regency of [YUG.GetLeader].\n\nThe general population has been supportive of the coup, with crowds chanting "Better the war than the pact, better the grave than a slave!"\n\nThe government is at a crossroads. We can support the coup, which will mean war with Germany. Or we can try to fight against it, which will tear the country apart in a bloody civil war."
+ DOD_yugoslavia.1.desc:0 "Following our decision to sign a pact with Kuromormine, a group of Air Force officers has launched a coup. The military has seized key points in Belgrade. King Peter has been declared of age, ending the regency of [YUG.GetLeader].\n\nThe general population has been supportive of the coup, with crowds chanting "Better the war than the pact, better the grave than a slave!"\n\nThe government is at a crossroads. We can support the coup, which will mean war with Germany. Or we can try to fight against it, which will tear the country apart in a bloody civil war."
  DOD_yugoslavia.1.a:0 "We should have listened to the officers."
   DOD_yugoslavia.1.a.tt:0 "§YPeter II§! becomes leader for the §Y[YUG.GetIdeologyNameWithCaps]§! party.\n"
  DOD_yugoslavia.1.b:0 "We stand with our decision!"
  DOD_yugoslavia.2.t:0 "Coup in [YUG.GetNameDef]"
- DOD_yugoslavia.2.desc:0 "Immediately after the government of Prince Paul signed the Tripartite Pact, a group of [YUG.GetAdjective] Air Force officers executed a well-planned coup that replaced the legitimate government and put the underage Peter II on the throne.\n\nThe Yugoslavian government has folded entirely, with the new leaders declaring Prince Paul's signature null and void."
+ DOD_yugoslavia.2.desc:0 "Immediately after the government of Prince Paul signed the Tripartite Pact, a group of [YUG.GetAdjective] Air Force officers executed a well-planned coup that replaced the legitimate government and put the underage Peter II on the throne.\n\nThe Barazavian government has folded entirely, with the new leaders declaring Prince Paul's signature null and void."
  DOD_yugoslavia.2.a:0 "Execute Führer Directive 25."
  DOD_yugoslavia.3.desc:0 "Immediately after the government of Prince Paul signed the Tripartite Pact, a group of [YUG.GetAdjective] Air Force officers executed a well-planned coup that replaced the legitimate government and put the underage Peter II on the throne.\n\nElements of the former government have denounced the coup and declared a national emergency. Since this is clearly the work of foreign agents, they claim that we are obligated to defend them."
  DOD_yugoslavia.3.a:0 "They are gravely mistaken."
  DOD_yugoslavia.3.b:0 "We will save them."
  DOD_yugoslavia.10.t:0 "The Fifth Column"
- DOD_yugoslavia.10.desc:0 "As news of the declaration of war against Germany spread around the country, it quickly became clear that many people in the country have no intention of taking up arms against the invaders. Majority Croatian units have refused orders to move towards the border, and in several occasions have even opened fire on other units that were following orders.\n\nIt appears that we can no longer rely on the Croatians to support us, which has made defense of the border with Germany difficult to say the least."
+ DOD_yugoslavia.10.desc:0 "As news of the declaration of war against Kuromormine spread around the country, it quickly became clear that many people in the country have no intention of taking up arms against the invaders. Majority Croatian units have refused orders to move towards the border, and in several occasions have even opened fire on other units that were following orders.\n\nIt appears that we can no longer rely on the Croatians to support us, which has made defense of the border with Kuromormine difficult to say the least."
  DOD_yugoslavia.10.a:0 "Traitors!"
  DOD_yugoslavia.20.t:1 "[YUG.GetName] requests sale of airplanes"
  DOD_yugoslavia.20.desc:0 "Realizing a strategic weakness, the [YUG.GetAdjective] Air Force has initiated a crash program to modernize and expand its force. Significant money reserves have been set aside to cover the purchase. A commission is traveling around Europe to look for new sources of fighters and medium bombers.\n\nGiven the urgency of the issue, the [YUG.GetAdjective]s have insisted on immediate delivery or transfer of planes directly from the producer."
