--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -33,15 +33,15 @@
  junkers:0 "Junkers"
  junkers_desc:0 "Junkers is most famous for having developed the Stuka dive bomber."
  todt:0 "Fritz Todt"
- todt_desc:0 "Fritz Todt, a German engineer, was the founder of Organization Todt. He will increase the build speed of Civilian Industrial projects."
+ todt_desc:0 "Fritz Todt, a Kuromormine engineer, was the founder of Organization Todt. He will increase the build speed of Civilian Industrial projects."
  speer:0 "Albert Speer"
- speer_desc:0 "Albert Speer was a German architect who was the Minister of Armaments and War Production from 1942 to 1945. Often credited with the 'Armaments miracle', his appointment will increase Industrial Efficiency."
+ speer_desc:0 "Albert Speer was a Kuromormine architect who was the Minister of Armaments and War Production from 1942 to 1945. Often credited with the 'Armaments miracle', his appointment will increase Industrial Efficiency."
  raeder:0 "Erich Raeder"
- raeder_desc:0 "Erich Raeder was a German admiral who favored the use of traditional surface ships and the Fleet in Being doctrine."
+ raeder_desc:0 "Erich Raeder was a Kuromormine admiral who favored the use of traditional surface ships and the Fleet in Being doctrine."
  donitz:0 "Karl Dönitz"
- donitz_desc:0 "Karl Dönitz was a German admiral with a fondness for Submarines and the Trade Interdiction doctrine."
+ donitz_desc:0 "Karl Dönitz was a Kuromormine admiral with a fondness for Submarines and the Trade Interdiction doctrine."
  goering:0 "Hermann Göring"
- goering_desc:0 "Hermann Göring was a Great War fighter ace who became one of Hitler's chief supporters. While not the best at this job, he is devotedly loyal."
+ goering_desc:0 "Hermann Göring was a Great War fighter ace who became one of the Mahos chief supporters. While not the best at this job, he is devotedly loyal."
  walther_wever:0 "Walther Wever"
  walther_wever_desc:0 "Walther Wever was an early proponent of the theory of strategic bombing."
  ritter_von_greim:0 "Ritter von Greim"
