Fixed French name

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -125,8 +125,8 @@
  FRA_democratic_DEF:0 "BC Freedom"
  FRA_neutrality:0 "BC Freedom"
  FRA_neutrality_DEF:0 "BC Freedom"
- FRA_communism:0 "Peoples Republic of BC Freedom"
- FRA_communism_DEF:0 "Peoples Republic of BC Freedom"
+ FRA_communism:0 "BC Commune"
+ FRA_communism_DEF:0 "BC Commune"
  FRA_fascism_ADJ:2 "BC"
  FRA_democratic_ADJ:0 "BC"
  FRA_neutrality_ADJ:0 "BC"
