--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -91,4 +91,5 @@
  LOADING_TIP_89:0 "Can we not fight over trivial things? The cake will go bad.\n- Marie"
  LOADING_TIP_90:0 "I wonder which would happen first, Me finishing the cake, or their white flag popping up?\n -Marie"
  LOADING_TIP_91:0 "Yup.\n- Maho" #nope
- 
+ LOADING_TIP_92:0 "Quit speaking russian!!! /n- Katyusha"
+ LOADING_TIP_93:0 "Onion /n- Rena Andou"
