--- a/localisation/english/mtg_decisions_l_english.yml
+++ b/localisation/english/mtg_decisions_l_english.yml
@@ -87,8 +87,8 @@
  USA_execute_war_plan_crimson:1 "Execute War Plan Crimson"
  USA_execute_war_plan_gold:1 "Execute War Plan Gold"
  USA_foreign_support:1 "Search for foreign supporters"
- mtg_usa_north_american_dominion_refused_faction:0 "The Anti-American Coalition has formed."
- USA_form_defensive_alliance_north_american_dominion:0 "Form the Anti-American Coalition"
+ mtg_usa_north_american_dominion_refused_faction:0 "The Anti-Saunders Coalition has formed."
+ USA_form_defensive_alliance_north_american_dominion:0 "Form the Anti-Saunders Coalition"
  USA_join_defensive_alliance_north_american_dominion:0 "Join the Coalition"
  USA_congress:1 "Congress"
  USA_congress_desc:1 "The Hill has its own rules and ideas. We will have to work with them to make things happen, but there are ways to ensure that we have a sympathetic and supportive Congress to work with."
@@ -108,15 +108,15 @@
  USA_prepare_intervention_in_asia_against_FROM:1 "Prepare Intervention against [From.GetNameDef]"
  USA_request_mandate_against_FROM:1 "Request Approval for an Intervention against [From.GetNameDef]"
  USA_request_monroe_mandate_against_FROM:0 "Enforce the Monroe Doctrine against [From.GetNameDef]"
- USA_protest_indochina:0 "Protest the Japanese Presence in Indochina"
- USA_protest_china:0 "Protest against the Japanese Invasion of China"
- USA_protest_yugoslavia:0 "Protest against the Italian demands on Yugoslavia"
+ USA_protest_indochina:0 "Protest the Chi Ha Tan Presence in Indochina"
+ USA_protest_china:0 "Protest against the Chi Ha Tan Invasion of Zhongguo"
+ USA_protest_yugoslavia:0 "Protest against the Anzio demands on Brazava"
  USA_protest_albania:0 "Protest against the Annexation of Albania"
- USA_protest_army_of_aggression:0 "Protest against French Warmongering"
+ USA_protest_army_of_aggression:0 "Protest against BC  Warmongering"
  USA_protest_baltic_annexation:0 "Protest against the Baltic Annexations"
- USA_protest_molotov_ribbentrop:0 "Protest against the Molotov-Ribbentrop Pact"
+ USA_protest_molotov_ribbentrop:0 "Protest against the Koume-Klara Pact"
  USA_protest_munich:0 "Protest against the Munich Agreement"
- USA_protest_anschluss:0 "Protest against the Anschluss of Austria"
+ USA_protest_anschluss:0 "Protest against the Anschluss of Ooarahi"
  USA_protest_panay:0 "Exploit the Sinking of the USS Panay"
  congress_low_support_trigger_tt:1 "Requires the support of at least §Y[?USA.quorum_low] Senators§! (current: [?USA.senators_support]) and §Y174 Representatives§! (current: [?USA.representatives_support])\n"
  congress_medium_support_trigger_tt:1 "Requires the support of at least §Y[?USA.quorum_medium] Senators§! (current: [?USA.senators_support]) and §Y218 Representatives§! (current: [?USA.representatives_support])\n"
@@ -251,64 +251,64 @@
  ENG_request_trade_union_construction_worker_support_desc:0 "We will use our connections and goodwill in the Trade Unions to convince them of the importance that construction productivity is increased for the immediate future. With their support, we can motivate the construction workforce."
  ENG_request_trade_union_war_propaganda_support:1 "Request Trade Union War Propaganda Support"
  ENG_request_trade_union_war_propaganda_support_desc:0 "We require aid from the Trade Unions to prepare the people for war - it is coming, and they must support the government preparing for it."
- ENG_impose_martial_law_on_canada:1 "Impose Martial law on Canada"
- ENG_impose_martial_law_on_canada_desc:0 "The people of Canada are misguided, and must be protected from themselves. During this time we can re-educate them and see to their government."
+ ENG_impose_martial_law_on_canada:1 "Impose Martial law on Maple"
+ ENG_impose_martial_law_on_canada_desc:0 "The people of Maple are misguided, and must be protected from themselves. During this time we can re-educate them and see to their government."
  ENG_impose_martial_law_tt:1 "AI is prevented from breaking free for 180 days."
  ENG_cannot_leave_faction:1 "Has Martial Law."
 
- ENG_propaganda_campaigns_in_canada:1 "Propaganda Campaigns in Canada"
- ENG_propaganda_campaigns_in_canada_desc:0 "We will launch a major propaganda campaign to educate the Canadian people on the follies of their government, and the necessity for British guidance."
- ENG_replace_government_in_canada_fascism:1 "Install Fascist Government in Canada"
- ENG_replace_government_in_canada_fascism_desc:0 "The Canadian people are ready for a change in government to one more... amenable to our fascist leadership."
- ENG_replace_government_in_canada_communism:1 "Install Communist Government in Canada"
- ENG_replace_government_in_canada_communism_desc:0 "The Canadian people are ready for a change in government to one more... amenable to our communist leadership."
+ ENG_propaganda_campaigns_in_canada:1 "Propaganda Campaigns in Maple"
+ ENG_propaganda_campaigns_in_canada_desc:0 "We will launch a major propaganda campaign to educate the Maple people on the follies of their government, and the necessity for Gloriana guidance."
+ ENG_replace_government_in_canada_fascism:1 "Install Fascist Government in maple"
+ ENG_replace_government_in_canada_fascism_desc:0 "The Maplian people are ready for a change in government to one more... amenable to our fascist leadership."
+ ENG_replace_government_in_canada_communism:1 "Install Communist Government in Maple"
+ ENG_replace_government_in_canada_communism_desc:0 "The Maplian people are ready for a change in government to one more... amenable to our communist leadership."
  ENG_replace_government_communism_tt:1 "Will remain a puppet when Decolonization is achieved.\n"
- ENG_impose_martial_law_on_south_africa:1 "Impose Martial law on South Africa"
- ENG_impose_martial_law_on_south_africa_desc:0 "The people of South Africa are misguided, and must be protected from themselves. During this time we can re-educate them and see to their government."
- ENG_propaganda_campaigns_in_south_africa:1 "Propaganda Campaigns in South Africa"
- ENG_propaganda_campaigns_in_south_africa_desc:0 "We will launch a major propaganda campaign to educate the South African people on the follies of their government, and the necessity for British guidance."
- ENG_replace_government_in_south_africa_fascism:1 "Install Fascist Government in South Africa"
- ENG_replace_government_in_south_africa_fascism_desc:0 "The South African people are ready for a change in government to one more... amenable to our fascist leadership."
- ENG_replace_government_in_south_africa_communism:1 "Install Communist Government in South Africa"
- ENG_replace_government_in_south_africa_communism_desc:0 "The South African people are ready for a change in government to one more... amenable to our communist leadership."
- ENG_impose_martial_law_on_british_raj:1 "Impose Martial Law on British Raj"
- ENG_impose_martial_law_on_british_raj_desc:0 "The people of India are misguided, and must be protected from themselves. During this time we can re-educate them and see to their government."
- ENG_propaganda_campaigns_in_british_raj:1 "Propaganda Campaigns in British Raj"
- ENG_propaganda_campaigns_in_british_raj_desc:0 "We will launch a major propaganda campaign to educate the Indian people on the follies of their government, and the necessity for British guidance."
- ENG_replace_government_in_british_raj_fascism:1 "Install Fascist Government in British Raj"
- ENG_replace_government_in_british_raj_fascism_desc:0 "The Indian people are ready for a change in government to one more... amenable to our fascist leadership."
- ENG_replace_government_in_british_raj_communism:1 "Install Communist Government in British Raj"
- ENG_replace_government_in_british_raj_communism_desc:0 "The Indian people are ready for a change in government to one more... amenable to our communist leadership."
- ENG_impose_martial_law_on_australia:1 "Impose Martial Law on Australia"
- ENG_impose_martial_law_on_australia_desc:0 "The people of Australia are misguided, and must be protected from themselves. During this time we can re-educate them and see to their government."
- ENG_propaganda_campaigns_in_australia:1 "Propaganda Campaigns in Australia"
- ENG_propaganda_campaigns_in_australia_desc:0 "We will launch a major propaganda campaign to educate the Australian people on the follies of their government, and the necessity for British guidance."
- ENG_replace_government_in_australia_fascism:1 "Install Fascist Government in Australia"
- ENG_replace_government_in_australia_fascism_desc:0 "The Australian people are ready for a change in government to one more... amenable to our fascist leadership."
- ENG_replace_government_in_australia_communism:1 "Install Communist Government in Australia"
- ENG_replace_government_in_australia_communism_desc:0 "The Australian people are ready for a change in government to one more... amenable to our communist leadership."
- ENG_impose_martial_law_on_new_zealand:1 "Impose Martial Law on New Zealand"
- ENG_impose_martial_law_on_new_zealand_desc:0 "The people of New Zealand are misguided, and must be protected from themselves. During this time we can re-educate them and see to their government."
- ENG_propaganda_campaigns_in_new_zealand:1 "Propaganda Campaigns in New Zealand"
- ENG_propaganda_campaigns_in_new_zealand_desc:0 "We will launch a major propaganda campaign to educate the New Zealand people on the follies of their government, and the necessity for British guidance."
- ENG_replace_government_in_new_zealand_fascism:1 "Install Fascist Government in New Zealand"
- ENG_replace_government_in_new_zealand_fascism_desc:0 "The New Zealand people are ready for a change in government to one more... amenable to our fascist leadership."
- ENG_replace_government_in_new_zealand_communism:1 "Install Communist Government in New Zealand"
- ENG_replace_government_in_new_zealand_communism_desc:0 "The New Zealand people are ready for a change in government to one more... amenable to our communist leadership."
- ENG_support_imperialist_coup_in_canada:1 "Foment Canadian Imperialist Uprising"
- ENG_support_imperialist_coup_in_canada_desc:0 "The time has come to support loyalist elements in Canada in preparation for igniting a full-blown civil war."
- ENG_renew_support_for_imperialist_coup_in_canada_tt:1 "Canada will have 90 days to suppress the uprising before it happens.\n"
+ ENG_impose_martial_law_on_south_africa:1 "Impose Martial law on Mzansi"
+ ENG_impose_martial_law_on_south_africa_desc:0 "The people of Mzansi are misguided, and must be protected from themselves. During this time we can re-educate them and see to their government."
+ ENG_propaganda_campaigns_in_south_africa:1 "Propaganda Campaigns in Mzansi"
+ ENG_propaganda_campaigns_in_south_africa_desc:0 "We will launch a major propaganda campaign to educate the Mzansi people on the follies of their government, and the necessity for British guidance."
+ ENG_replace_government_in_south_africa_fascism:1 "Install Fascist Government in Mzansi"
+ ENG_replace_government_in_south_africa_fascism_desc:0 "The Mzansi people are ready for a change in government to one more... amenable to our fascist leadership."
+ ENG_replace_government_in_south_africa_communism:1 "Install Communist Government in Mzansi"
+ ENG_replace_government_in_south_africa_communism_desc:0 "The Mzansi people are ready for a change in government to one more... amenable to our communist leadership."
+ ENG_impose_martial_law_on_british_raj:1 "Impose Martial Law on Gloriana Raj"
+ ENG_impose_martial_law_on_british_raj_desc:0 "The people of Bharat are misguided, and must be protected from themselves. During this time we can re-educate them and see to their government."
+ ENG_propaganda_campaigns_in_british_raj:1 "Propaganda Campaigns in Gloriana Raj"
+ ENG_propaganda_campaigns_in_british_raj_desc:0 "We will launch a major propaganda campaign to educate the Bharat people on the follies of their government, and the necessity for British guidance."
+ ENG_replace_government_in_british_raj_fascism:1 "Install Fascist Government in Gloriana Raj"
+ ENG_replace_government_in_british_raj_fascism_desc:0 "The Bharat people are ready for a change in government to one more... amenable to our fascist leadership."
+ ENG_replace_government_in_british_raj_communism:1 "Install Communist Government in Gloriana Raj"
+ ENG_replace_government_in_british_raj_communism_desc:0 "The Bharat people are ready for a change in government to one more... amenable to our communist leadership."
+ ENG_impose_martial_law_on_australia:1 "Impose Martial Law on Koala"
+ ENG_impose_martial_law_on_australia_desc:0 "The people of Koala are misguided, and must be protected from themselves. During this time we can re-educate them and see to their government."
+ ENG_propaganda_campaigns_in_australia:1 "Propaganda Campaigns in Koala"
+ ENG_propaganda_campaigns_in_australia_desc:0 "We will launch a major propaganda campaign to educate the Koalian people on the follies of their government, and the necessity for British guidance."
+ ENG_replace_government_in_australia_fascism:1 "Install Fascist Government in Koala"
+ ENG_replace_government_in_australia_fascism_desc:0 "The Koalian people are ready for a change in government to one more... amenable to our fascist leadership."
+ ENG_replace_government_in_australia_communism:1 "Install Communist Government in Koala"
+ ENG_replace_government_in_australia_communism_desc:0 "The Koalian people are ready for a change in government to one more... amenable to our communist leadership."
+ ENG_impose_martial_law_on_new_zealand:1 "Impose Martial Law on Kiwi"
+ ENG_impose_martial_law_on_new_zealand_desc:0 "The people of Kiwi are misguided, and must be protected from themselves. During this time we can re-educate them and see to their government."
+ ENG_propaganda_campaigns_in_new_zealand:1 "Propaganda Campaigns in Kiwi"
+ ENG_propaganda_campaigns_in_new_zealand_desc:0 "We will launch a major propaganda campaign to educate the Kiwi people on the follies of their government, and the necessity for British guidance."
+ ENG_replace_government_in_new_zealand_fascism:1 "Install Fascist Government in Kiwi"
+ ENG_replace_government_in_new_zealand_fascism_desc:0 "The Kiwi people are ready for a change in government to one more... amenable to our fascist leadership."
+ ENG_replace_government_in_new_zealand_communism:1 "Install Communist Government in Kiwi"
+ ENG_replace_government_in_new_zealand_communism_desc:0 "The Kiwi people are ready for a change in government to one more... amenable to our communist leadership."
+ ENG_support_imperialist_coup_in_canada:1 "Foment Maplian Imperialist Uprising"
+ ENG_support_imperialist_coup_in_canada_desc:0 "The time has come to support loyalist elements in maple in preparation for igniting a full-blown civil war."
+ ENG_renew_support_for_imperialist_coup_in_canada_tt:1 "maple will have 90 days to suppress the uprising before it happens.\n"
  ENG_support_imperialist_coup_in_canada_mission_1:1 "Imperialist Uprising Imminent"
  ENG_support_imperialist_coup_in_canada_mission_1_desc:0 "Imperial loyalists are fomenting rebellion! If successful, they will plunge the country into civil war!"
  ENG_CAN_suppressed_coup:1 "Canada suppressed the uprising.\n"
  ENG_suppress_imperialist_coup_in_canada:1 "Suppress the Imperialist Uprising"
  ENG_suppress_imperialist_coup_in_canada_desc:1 "We will stamp out this reactionary rebellion wherever it rears its ugly head."
- ENG_suppress_imperialist_coup_tt:1 "Britain will have 90 days to increase support for the uprising before it fails.\n"
- ENG_support_imperialist_coup_in_canada_mission_2:1 "Canadian Uprising Suppressed"
- ENG_support_imperialist_coup_in_canada_mission_2_desc:1 "The Canadian government has suppressed our loyalist movements, and unless we act quickly any hope for a rebellion will be irrevocably stamped out..."
+ ENG_suppress_imperialist_coup_tt:1 "Gloriana will have 90 days to increase support for the uprising before it fails.\n"
+ ENG_support_imperialist_coup_in_canada_mission_2:1 "Maplian Uprising Suppressed"
+ ENG_support_imperialist_coup_in_canada_mission_2_desc:1 "The Maplian government has suppressed our loyalist movements, and unless we act quickly any hope for a rebellion will be irrevocably stamped out..."
  ENG_support_imperialist_coup_mission_2_tt:1 "The uprising will fail.\n"
  ENG_support_imperialist_coup_in_canada_mission_2_tt:1 "Renewed support for the uprising.\n"
- ENG_renew_support_for_imperialist_coup_in_canada:1 "Renew Support for Canadian Uprising"
+ ENG_renew_support_for_imperialist_coup_in_canada:1 "Renew Support for Maplian Uprising"
  ENG_renew_support_for_imperialist_coup_in_canada_desc:1 "The loyalists can count on our continued support!"
  ENG_support_imperialist_coup_in_south_africa:1 "Foment South African Imperialist Uprising"
  ENG_support_imperialist_coup_in_south_africa_desc:0 "The time has come to support loyalist elements in South Africa in preparation for igniting a full-blown civil war."
